force-app/main/default/objects/Flow_Error_Log__c/Flow_Error_Log__c.object-meta.xml
<CustomObject>
    <label>Flow Error Log</label>
    <nameField>
        <label>Flow Error Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Flow Error Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>