force-app/main/default/objects/Flow_Error_Log__c/fields/Error_Occurred_At__c.field-meta.xml
<CustomField>
    <fullName>Error_Occurred_At__c</fullName>
    <label>Error Occurred At</label>
    <type>DateTime</type>
</CustomField>