force-app/main/default/objects/Flow_Error_Log__c/fields/Flow_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Flow_Error_Message__c</fullName>
    <label>Flow Error Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>